[package]
name = "rand-functors"
version = "0.7.0"
authors = ["Alex Steele"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ADSteele916/rand-functors"
homepage = "https://github.com/ADSteele916/rand-functors"
description = """
A zero-cost abstraction for sampling from and enumerating the outcomes of a random process using the same code.
"""
keywords = ["random", "rng"]
categories = ["algorithms", "no-std", "no-std::no-alloc", "science"]
edition = "2021"
rust-version = "1.75.0"
include = ["src/", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.18", default-features = false }
rand = { version = "0.8.5", default-features = false }

[dev-dependencies]
ahash = "0.8.11"
rand = "0.8.5"
rand_chacha = "0.3.1"

[features]
default = ["std"]
alloc = ["rand/alloc"]
std = ["alloc", "rand/std"]
